--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && mv build docs",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "format": "prettier --write ./src/**/*.{ts,tsx}"
+    "format": "prettier --write ./src/**/*.{ts,tsx}",
+    "predeply": "npm run build",
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "https://yoshi0701.github.io/metaweather-app/",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -49,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "prettier": "^2.2.1"
   }
 }
