--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^4.12.3",
     "axios": "^0.21.1",
     "dayjs": "^1.10.4",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
